--- a/j/src/main/resources/application.yaml
+++ b/j/src/main/resources/application.yaml
@@ -5,6 +5,22 @@ spring:
     admin:
       client:
         url: "http://localhost:8081"
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
+  # PostgreSQL Configuration
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: postgres
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 server:
   port: 8080
